nat-gateway.tf
#allocate elastic IP (EIP 1)
resource "aws_eip" "eip-for-nat-gateway-1" {
  vpc      = true

  tags = {
    Name = "EIP 1"
      }
}

#allocate elastic IP (EIP 2)
resource "aws_eip" "eip-for-nat-gateway-2" {
  vpc      = true

  tags = {
    Name = "EIP 2"
  }
}

#create NatGateway public subnet 1
resource "aws_nat_gateway" "nat-gateway-1" {
  allocation_id = aws_eip.eip-for-nat-gateway-1.id
  subnet_id     = aws_subnet.public-subnet-1.id

  tags = {
    Name = "NatGateway public subnet 1"
  }

}

#create NatGateway public subnet 2
resource "aws_nat_gateway" "nat-gateway-2" {
  allocation_id = aws_eip.eip-for-nat-gateway-2.id
  subnet_id     = aws_subnet.public-subnet-2.id

  tags = {
    Name = "NatGateway public subnet 2"
  }

}


#private route table 1 add to natgatway 1
resource "aws_route_table" "private-route-table-1" {
  vpc_id = aws_vpc.vpc.id

  route  {
      cidr_block = "0.0.0.0/0"
      nat_gateway_id = aws_nat_gateway.nat-gateway-1.id
    }
    
  tags = {
    Name = "Private route table 1"
  }
}

#Associate private subent 1 with private route table 1
resource "aws_route_table_association" "private-subnet-1-route-table-association" {
  subnet_id      = aws_subnet.private-subnet-1.id
  route_table_id = aws_route_table.private-route-table-1.id
}
#Associate private subent 3 with private route table 1
resource "aws_route_table_association" "private-subnet-3-route-table-association" {
  subnet_id      = aws_subnet.private-subnet-3.id
  route_table_id = aws_route_table.private-route-table-1.id
}

#private route table 2 add to natgatway 2
resource "aws_route_table" "private-route-table-2" {
  vpc_id = aws_vpc.vpc.id

  route  {
      cidr_block = "0.0.0.0/0"
      nat_gateway_id = aws_nat_gateway.nat-gateway-2.id
    }
    
  tags = {
    Name = "Private route table 2"
  }
}

#Associate private subent 2 with private route table 2
resource "aws_route_table_association" "private-subnet-2-route-table-association" {
  subnet_id      = aws_subnet.private-subnet-2.id
  route_table_id = aws_route_table.private-route-table-2.id
}

#Associate private subent 4 with private route table 2
resource "aws_route_table_association" "private-subnet-4-route-table-association" {
  subnet_id      = aws_subnet.private-subnet-4.id
  route_table_id = aws_route_table.private-route-table-2.id
}
